packages/site/src/common/components/side-nav/logo.module.css
@import "@pluralsight/ps-design-system-core";

.root {
  display: flex;
  justify-content: center;
  align-items: center;
  border-bottom: 1px solid var(--psColorsGray01);
  text-decoration: none;
  padding: var(--psLayoutSpacingLarge) 0;
}
.root:hover {
  text-decoration: none !important;
}
.img {
  height: 31px;
  width: 31px;
  margin-right: 8px;
}
.text {
  margin: 0;
}
.textCompany {
  display: block;
  letter-spacing: .15em;
  font-size: var(--psTypeFontSizeXSmall);
  font-weight: var(--psTypeFontWeightMedium);
  color: #000; /* TODO: real colorz */
  font-family: var(--psTypeFontFamily);
  padding-top: var(--psLayoutSpacingXSmall);
}
.textTitle {
  font-size: 8px; /* TODO: not in ds */
  color: var(--psColorsGray03);
  font-weight: var(--psTypeFontWeightMedium);
}

@media screen and (min-width: 769px) {
  .root {
    padding: 72px 0;
  }
}

